add image of car along with year of car, all cars can still delete

--- a/views/cars.html.twig
+++ b/views/cars.html.twig
@@ -14,42 +14,47 @@
         <h2>Sell your car here</h2>
       </div>  <!-- .jumbotron -->
       <div class='row'>
-        <div class='col-md-6'>
-
-          <form action='/dealership' method='post'>
+          <!-- FORM -->
+        <form action='/dealership' method='post'>
+          <div class='col-md-6'>
             <div class='form-group'>
-              <label for='make'>Enter Make of your car</label>
+              <label for='year'>What year is your car?</label>
+              <input type='text' name='year' id='year' class='form-control' >
+            </div>
+            <div class='form-group'>
+              <label for='make'>What Make?</label>
               <input type='text' name='make' id='make' class='form-control' >
             </div>
             <div class='form-group'>
-              <label for='model'>Enter Model of your car</label>
+              <label for='model'>What Model?</label>
               <input type='text' name='model' id='model' class='form-control' >
             </div>
             <div class='form-group'>
               <label for='miles'>How many miles does it have?</label>
               <input type='number' name='miles' id='miles' class='form-control' >
             </div>
-        </div>  <!-- .col-md-6 -->
+          </div>  <!-- .col-md-6 -->
 
-        <div class='col-md-6'>
-          <div class='row'>
-            <div class='col-md-12'>
-              <div class='form-group'>
-                <label for='color'>What color is your car</label>
-                <input type='text' name='color' id='color' class='form-control' >
-              </div>
-              <div class='form-group'>
-                <label for='price'>Enter how much money chew gots for a car bro</label>
-                <input type='number' name='price' id='price' class='form-control' >
-              </div>
-            </div>  <!-- .col-md-12 -->
-                <button type='submit' class='btn btn-lg btn-primary'>Find my car!</button>
-          </form>
-          </div>   <!-- .row - buttons-->
-        </div>  <!-- .col-md-6 -->
+          <div class='col-md-6'>
+            <div class='form-group'>
+              <label for='color'>What color is your car</label>
+              <input type='text' name='color' id='color' class='form-control' >
+            </div>
+            <div class='form-group'>
+              <label for='price'>Sell Price</label>
+              <input type='number' name='price' id='price' class='form-control' >
+            </div>
+            <div class='form-group'>
+              <label for='image'>Submit URL to car</label>
+              <input type='text' name='image' id='image' class='form-control' >
+            </div>
+            <button type='submit' class='btn btn-lg btn-primary'>List my car!</button>
+          </div>  <!-- .col-md-6 -->
+        </form>     <!-- /FORM -->
       </div>  <!-- .row -->
 
       <div class='row'>
+      <hr>
         <div class='col-md-3'>
           <h2>Cars for sale</h2>
         </div>
@@ -62,22 +67,22 @@
       </div>  <!-- .row -->
 
       <div class="row">
-        <div class='col-md-6 cardiv'>
           {% for car in cars %}
-              <p>Make: {{ car.getMake }} </p>
-              <p>Model: {{ car.getModel }}  </p>
-              <p>Miles: {{ car.getMiles }}</p>
-              <p>Color: {{ car.getColor }}</p>
-              <p>Price: ${{ car.getPrice }}</p>
+              <div class='col-md-5 cardiv'>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <h4>{{ car.getYear }}</h4>
+                      <h4>{{ car.getMake }} {{ car.getModel }}</h4>
+                      <h6>Miles: {{ car.getMiles }}</h6>
+                      <h6>Color: {{ car.getColor }}</h6>
+                      <h6>Price: ${{ car.getPrice }}</h6>
+                    </div>
+                    <div class="col-md-6">
+                      <img src='{{ car.getImage }}'>
+                    </div>
+                  </div>
+              </div>  <!-- .col-md-6 -->
           {% endfor %}
-
-
-        </div>  <!-- .col-md-6 -->
-        <div class='col-md-6 cardiv'>
-          <p>stuff goes here</p>
-
-
-        </div>  <!-- .col-md-6 -->
       </div>  <!-- .row -->
 
 
