--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -2,9 +2,13 @@
   border: 1px solid grey;
   border-radius: 10px;
   padding: 10px;
-  /*margin: 5px;*/
+  margin: 5px 15px;
 }
 
 .row {
   margin: 10px;
+}
+
+img {
+  max-width: 100%;
 }
